@@ -1,4 +1,5 @@
 Release 4.26
+	- raise exception for HTML input (prevents tagger exploit in HXL Proxy)
 	- make hxl.input.munge_url() public
 	- remove default tags for hxlcount script so that it can just count lines of data
 
